--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eloquentjs",
-  "version": "1.0.0",
-  "description": "A simple SQL ORM for Nodejs thats aims to be as simple as laravels's eloquent ORM",
+  "name": "CompactJs",
+  "version": "0.0.1",
+  "description": "A simple SQL ORM for Nodejs thats aims to be as simple as laravel's eloquent ORM",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
