--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple SQL ORM for Nodejs thats aims to be as simple as laravel's eloquent ORM",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
